# AVS

AVS/: CMakeLists.txt  circle.cpp  circle.h  container.cpp  container.h  exceptions.cpp  exceptions.h  input3.txt  main.cpp  out1.txt  out2.txt  point.h  random.cpp  random.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
AVS5/: README
AVS5/HW5/: CMakeLists.txt  Gentleman.cpp  Gentleman.h  Hotel.cpp  Hotel.h  Lady.cpp  Lady.h  Room.cpp  Room.h  main.cpp
AVS_Second_Task/: CMakeLists.txt  circle.cpp  circle.h  container.cpp  container.h  exceptions.cpp  exceptions.h  generationTests.cpp  generationTests.h  input.txt  input2.txt  input4.txt  input5.txt  main.cpp  out1.txt  out2.txt  point.h  random.cpp  random.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
avs_third_task/: circle.py  container.py  exceptions.py  generatorAndWriter.py  input.txt  input3.txt  input4.txt  input5.txt  main.py  output.txt  point.py  rectangle.py  shape.py  triangle.py
